# serializer version: 1
# name: test_dashboard_when_mid_session_does_render_full_layout
  '''
  ╭─ supervise · session 20260813-125044-34ec · branch gymrat/20260813-125044-34ec ──────────────────╮
  │ time ━━━━━━━━━━━━━━━━━━━━━━━                                               2h 42m  cap in 5h 17m │
  │ cost $4.12 / $10.00                                                                              │
  │ loop   3/5 iterations · 1 kept · 1 discarded · last -6.8% improved                               │
  │ best -6.8% geomean vs baseline abc1234 (iteration 3)                                             │
  │   02:41:03  Bash   gymrat iterate  1m 0s                                                         │
  │   02:41:03  Edit   src/archetype.ts  <1s                                                         │
  │   02:41:02  Read   src/archetype.ts  2h 41m                                                      │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_frame_when_just_launched_does_show_zero_cost_and_no_best_row
  '''
  ╭─ supervise · session 20260813-125044-34ec · branch gymrat/20260813-125044-34ec ──────────────────╮
  │ time                                                                           0s  cap in 8h 00m │
  │ cost $0.00                                                                                       │
  │ loop   no session yet                                                                            │
  │ starting                                                                                         │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_liveness_when_four_tools_finish_does_show_only_last_three
  '''
  ╭─ supervise · session 20260813-125044-34ec · branch gymrat/20260813-125044-34ec ──────────────────╮
  │ time                                                                           4s  cap in 7h 59m │
  │ cost $0.00                                                                                       │
  │ loop   no session yet                                                                            │
  │   waiting  0s                                                                                    │
  │   00:00:05  Read   src/c.ts  <1s                                                                 │
  │   00:00:04  Bash   npm test  <1s                                                                 │
  │   00:00:03  Edit   src/b.ts  <1s                                                                 │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_loop_when_iterations_present_does_show_counts_and_last
  '''
  ╭─ supervise · session 20260813-125044-34ec · branch gymrat/20260813-125044-34ec ──────────────────╮
  │ time                                                                           0s  cap in 8h 00m │
  │ cost $0.00                                                                                       │
  │ loop   3/20 iterations · 2 kept · 1 discarded · last -3.2% improved                              │
  │   waiting  0s                                                                                    │
  │   00:00:03  Bash   ...  1s                                                                       │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_time_bar_when_elapsed_exceeds_max_does_clamp_remaining_to_zero
  '''
  ╭─ supervise · session 20260813-125044-34ec · branch gymrat/20260813-125044-34ec ──────────────────╮
  │ time ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 2h 00m  cap in 0s │
  │ cost $0.00                                                                                       │
  │ loop   no session yet                                                                            │
  │ starting                                                                                         │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  '''
# ---
